put the dark theme styles in the html to avoid flickering

--- a/src/content/dictheader.less
+++ b/src/content/dictheader.less
@@ -1,32 +1,3 @@
-/* For the dark or light theme */
-:root {
-  color-scheme: light dark; /* both supported */
-}
-body {
-  --text-color: #222;
-  --bkg-color: #fbfbfb;
-  --lighten-bkg-color: #cccccc;
-}
-body.dark-theme {
-  --text-color: #c5c5c5;
-  --bkg-color: #333333;
-  --lighten-bkg-color: #4c4c4c;
-}
-
-@media (prefers-color-scheme: dark) {
-  /* defaults to dark theme */
-  body {
-    --text-color: #c5c5c5;
-    --bkg-color: #333333;
-    --lighten-bkg-color: #4c4c4c;
-  }
-  body.light-theme {
-    --text-color: #222;
-    --bkg-color: #fbfbfb;
-    --lighten-bkg-color: #cccccc;
-  }
-}
-
 #fairy-dict {
   line-height: initial;
   box-sizing: border-box;
@@ -234,7 +205,7 @@ body.dark-theme {
     }
     .delete-word {
       cursor: pointer;
-      margin-right: 5px;
+      margin-right: ;
     }
   }
 
